--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     </a>
   </div>
   <style>
+    .tab-btn {
+  margin: 0 6px; /* horizontal spacing between buttons */
+}
     .info-section {
       margin-bottom: 25px;
       display: flex;
