--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     .tab-btn {
       padding: 10px 0;
       margin-right: 10px;
+      margin: 06px;
       border-radius: 8px;
       border: 2px solid #a67c52;
       background: transparent;
