--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <a class="btn" href="https://www.instagram.com/aingold.app?igsh=MXQ0eGtjdmk4eWh5Mw==https://www.instagram.com/aingold.app?igsh=MXQ0eGtjdmk4eWh5Mw==" target="_blank">Instagram</a>
     <a class="btn" href="https://www.facebook.com/share/19r3fiRKWo/" target="_blank">Facebook</a>
     <a class="btn" href="https://www.tiktok.com/@aingold.diamonds?_t=ZS-90DBGr0GBxy&_r=1" target="_blank">TikTok</a>
-    <a class="btn" href="https://youtube.com/@APPACCOUNT" target="_blank">YouTube</a>
+    <a class="btn" href="https://youtube.com/@yourACCOUNT" target="_blank">YouTube</a>
     <a class="btn" href="https://wa.me/971508609585" target="_blank">WhatsApp</a>
-    <a class="app-download" href="https://aingold.com/app-download" target="_blank">
+    <a class="app-download" href="https://play.google.com/store/apps/details?id=com.meark.ain" target="_blank">
       <span class="app-download-icon">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
           <rect x="3" y="3" width="16" height="16" rx="4" fill="#fff" stroke="#a67c52" stroke-width="1.5"/>
